<resources>
    <string name="app_name">Treasure</string>
    <string name="button">GO!</string>
    <string name="backButton">GO!</string>
    <string name="selectBox">Select a treasure here...</string>
    <string name="coins">You have XXX Coins</string>
    <string name="distanceBox">Show distance here</string>
    <string name="temperatureBox">Show temperature here!</string>
    <string name="infoBox">Object name and score here!</string>
    <string name="speedBox">See speed here!</string>
    <string name="avgSpeedBox">See average speed here!</string>



    <string name="respond">Button has been clicked</string>
    
    <string-array name="numbers">
        <item>Bethselaminian Backpack;8.507333224490367;47.40830372291337;150</item>
        <item>Staff of the Forlorn Traveler;8.50649637527772;47.40822299131271;120</item>
</string-array>
</resources>
